# mmpie1

./: .gitignore  Makefile  README.md  initial_setup.py  pyproject.toml
.github/: rename_project.sh
docker/: README.md
docker/backend/: Dockerfile
docker/compose/: Dockerfile
docker/dev/: Dockerfile
docker/release/: Dockerfile
docs/: conf.py  index.rst
mmpie1/: __init__.py
mmpie1/backend/deployment/: __init__.py  connection_client.py  deployment_server.py
mmpie1/backend/discord/: __init__.py  discord_client.py
mmpie1/backend/gateway/: __init__.py  connection_client.py  gateway_server.py
mmpie1/backend/training/: __init__.py  connection_client.py  training_server.py
mmpie1/configs/dataset/: codetr_conf.yaml  mnist.yaml
mmpie1/configs/model/: cnn.yaml  detr.yaml  mlp.yaml
mmpie1/configs/paths/: default.yaml
mmpie1/core/: __init__.py  base.py  config.ini  config.py
mmpie1/data/: COCODetection.py  COCODetectionDataset.py  MMPieDM.py  __init__.py  mnist.py
mmpie1/data/preprocessor/: __init__.py  preprocessor.py
mmpie1/data/transforms/: __init__.py  transforms.py
mmpie1/models/: __init__.py  cnn.py  detr.py  mlp.py
mmpie1/models/layers/: DETR_layers.py  __init__.py
mmpie1/models/losses/: DetrLoss.py  __init__.py
mmpie1/models/utils/: __init__.py  utils.py
mmpie1/modules/: __init__.py  gpt.py  registry.py
mmpie1/scripts/: create_project_directories.py  train.py  train_detr.py
mmpie1/scripts/tests/: datamodule_test.py  dataset_test.py  similiaryt_w_hf.py
mmpie1/types/: __init__.py
mmpie1/utils/: __init__.py  conversions.py  dynamic.py  timer.py
tests/: __init__.py
tests/mltemplate/core/: test_config.py
tests/mltemplate/modules/: test_registry.py
tests/mltemplate/utils/: test_checks.py  test_conversions.py  test_logging.py  test_timer.py  test_timer_collection.py
